# controllers/landlords.js
@@ -1,6 +1,15 @@
-const mongoose = require("mongoose")
+const mongoose = require("mongoose");
 const mongodb = require("../data/database");
 const ObjectId = require("mongodb").ObjectId;
+const joi = require("joi");
+const validateFun = require("../schemas");
+
+const landLordSchema = joi.object({
+  name: joi.string().min(3).max(30).lowercase().required(),
+  phone: joi.number().required(),
+  email: joi.string().email().required(),
+  address: joi.string().required(),
+});
 
 const getAllLandlords = async (req, res) => {
   const result = await mongodb
@@ -16,6 +25,10 @@ const getAllLandlords = async (req, res) => {
 };
 
 const getSingleLandlord = async (req, res) => {
+  if (mongoose.isValidObjectId(req.params.id) === false) {
+    return res.status(400).send("Bad objectId");
+  }
+
   const landlordId = new ObjectId(req.params.id);
   const singleLandlord = await mongodb
     .getDatabase()
@@ -31,18 +44,17 @@ const getSingleLandlord = async (req, res) => {
 };
 
 const createLandlord = async (req, res) => {
-  console.log("am here");
-  landlord = {
-    name: req.body.name,
-    phoneNumber: req.body.phoneNumber,
-    email: req.body.email,
-    address: req.body.address,
-     };
+  const { error, value } = validateFun.validate(landLordSchema, req.body);
+  if (error) {
+    return res.status(400).json(error.details);
+  }
+
+
   const response = await mongodb
     .getDatabase()
     .db()
     .collection("landlords")
-    .insertOne(landlord);
+    .insertOne(value);
   if (response.acknowledged) {
     res.status(204).send();
   } else {
@@ -53,6 +65,10 @@ const createLandlord = async (req, res) => {
 };
 
 const deleteSingleLandlord = async (req, res) => {
+
+  if (mongoose.isValidObjectId(req.params.id) === false) {
+    return res.status(400).send("Bad objectId");
+  }
   const landLordId = new ObjectId(req.params.id);
   const response = await mongodb
     .getDatabase()
@@ -72,26 +88,29 @@ const deleteSingleLandlord = async (req, res) => {
 };
 
 const updateLandlord = async (req, res) => {
-  if (mongoose.isValidObjectId(req.params.id) === false)
-  {
-   return res.status(400).send("Bad objectId")
-   
-
+  if (mongoose.isValidObjectId(req.params.id) === false) {
+    return res.status(400).send("Bad objectId");
   }
+
+  const { error, value } = validateFun.validate(propertySchema, req.body);
+  if (error) {
+    return res.status(400).json(error.details);
+  }
+
   const id = new ObjectId(req.params.id);
 
-     landlord = {
+  landlord = {
     name: req.body.name,
     phoneNumber: req.body.phoneNumber,
     email: req.body.email,
     address: req.body.address,
-     };
-   
+  };
+
   const response = await mongodb
     .getDatabase()
     .db()
     .collection("properties")
-    .replaceOne({ _id: id }, landlord);
+    .replaceOne({ _id: id }, value);
 
   if (response.modifiedCount > 0) {
     res.status(204).send();
