# controllers/users.js
@@ -1,7 +1,17 @@
 const mongoose = require("mongoose")
 const mongodb = require("../data/database");
 const ObjectId = require("mongodb").ObjectId;
+const joi = require("joi")
+const validateFun = require("../schemas")
 
+
+
+const userSchema = joi.object({
+  name: joi.string().min(3).max(30).lowercase().required(),
+  phone: joi.number().required(),
+  email: joi.string().email().required(),
+  address: joi.string().required(),
+});
 const getAllUsers = async (req, res) => {
       // #swagger.tags = ['Users']
        // #swagger.summary = Get all the users from the rental api
@@ -20,7 +30,12 @@ const getAllUsers = async (req, res) => {
 
 const getSingleUser = async (req, res) => {
     // #swagger.tags = ['Users']
-
+    if (mongoose.isValidObjectId(req.params.id) === false)
+    {
+     return res.status(400).send("Bad objectId")
+     
+  
+    }
   const userId = new ObjectId(req.params.id);
   const singleUser = await mongodb
     .getDatabase()
@@ -37,19 +52,17 @@ const getSingleUser = async (req, res) => {
 
 const createUser = async (req, res) => {
     // #swagger.tags = ['Users']
-  console.log("am here");
-  user = {
-    name: req.body.name,
-    phoneNumber: req.body.phoneNumber,
-    email: req.body.email,
-    address: req.body.address,
-     };
+    
+  const { error, value } = validateFun.validate(userSchema, req.body);
+  if (error) {
+    return res.status(400).json(error.details);
+  }
    
   const response = await mongodb
     .getDatabase()
     .db()
     .collection("users")
-    .insertOne(user);
+    .insertOne(value);
   if (response.acknowledged) {
     res.status(204).send();
   } else {
@@ -61,6 +74,12 @@ const createUser = async (req, res) => {
 
 const deleteSingleUser = async (req, res) => {
     // #swagger.tags = ['Users']
+    if (mongoose.isValidObjectId(req.params.id) === false)
+    {
+     return res.status(400).send("Bad objectId")
+     
+  
+    }
   const userId = new ObjectId(req.params.id);
   const response = await mongodb
     .getDatabase()
@@ -87,20 +106,20 @@ const updateUser = async (req, res) => {
    
 
   }
+  const { error, value } = validateFun.validate(userSchema, req.body);
+  if (error) {
+    return res.status(400).json(error.details);
+  }
+
   const userId = new ObjectId(req.params.id);
-  user = {
-    name: req.body.name,
-    phoneNumber: req.body.phoneNumber,
-    email: req.body.email,
-    address: req.body.address,
-     };
+
    
    
   const response = await mongodb
     .getDatabase()
     .db()
     .collection("users")
-    .replaceOne({ _id: userId }, user);
+    .replaceOne({ _id: userId }, value);
 
   if (response.modifiedCount > 0) {
     res.status(204).send();
